--- a/.github/workflows/gradle-java-standard.yml
+++ b/.github/workflows/gradle-java-standard.yml
@@ -1,30 +1,28 @@
-name: Gradle test, build and upload artifact
+name: Gradle test, publish, javadoc and release
 
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 jobs:
   test:
-    uses: MinestomBrick/.github/.github/workflows/java-gradle-test.yml@main
-
-#  build:
-#    needs: test
-#    uses: MinestomBrick/.github/.github/workflows/java-gradle-build-artifact.yml@main
+    uses: GufliOfficial/.github/.github/workflows/java-gradle-test.yml@main
 
   publish:
     needs: test
-    uses: MinestomBrick/.github/.github/workflows/java-gradle-publish.yml@main
+    uses: GufliOfficial/.github/.github/workflows/java-gradle-publish.yml@main
     secrets:
       JORISG_REPO_USERNAME: ${{ secrets.JORISG_REPO_USERNAME }}
       JORISG_REPO_PASSWORD: ${{ secrets.JORISG_REPO_PASSWORD }}
 
   javadoc:
     needs: test
-    uses: MinestomBrick/.github/.github/workflows/java-gradle-javadoc.yml@main
+    uses: GufliOfficial/.github/.github/workflows/java-gradle-multi-javadoc.yml@main
+    with:
+      projects: |
+        minestom-api
+        spigot-api
 
   pre-release:
     needs: test
-    uses: MinestomBrick/.github/.github/workflows/java-gradle-github-release.yml@main
+    uses: GufliOfficial/.github/.github/workflows/java-gradle-github-release.yml@main
