--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'BrickScheduler'
 
 include 'api'
-include 'app'
+include 'common'
+include 'minestom-api'
+include 'spigot-api'
 
