--- a/minestom-api/build.gradle
+++ b/minestom-api/build.gradle
@@ -3,7 +3,8 @@ repositories {
 }
 
 dependencies {
-    implementation project(':api')
+    api project(':api')
 
+    // provided by platform
     compileOnly 'com.github.Minestom:Minestom:-SNAPSHOT'
 }
