--- a/spigot-api/build.gradle
+++ b/spigot-api/build.gradle
@@ -1,10 +1,10 @@
-
 repositories {
     maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
 }
 
 dependencies {
-    implementation project(':api')
+    api project(':api')
 
+    // provided by platform
     compileOnly 'org.spigotmc:spigot-api:1.18.2-R0.1-SNAPSHOT'
 }
